--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
+  "buildCommand": "bash setup_flutter.sh && flutter build web",
+  "outputDirectory": "build/web",
   "routes": [
-    {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/assets/(.*)", "dest": "/assets/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
