--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
-  "buildCommand": "bash setup_flutter.sh && flutter build web",
-  "outputDirectory": "build/web",
+  "buildCommand": "echo 'Using pre-built files from web directory'",
+  "outputDirectory": "web",
   "routes": [
-    { "src": "/assets/(.*)", "dest": "/assets/$1" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|json|woff|woff2|ttf|eot))",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
